fixed error with link text overflow

--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -24,7 +24,11 @@ p {
  font-size: 18px;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 950px) {
+ .col-md-6 {
+  width: 100%;
+ }
+
  #first-row {
   margin-top: 40px;
  }
